# OmniCCG

./: .gitignore  LICENSE  README.md  analysis.py  backup.py  check_results.py  code_operations.py  commit_tests.py  core.py  main.py  metrics.json  metrics.py  new_features.txt  obs.txt  omniccg.py  production_results.xml  pyproject.toml  requirements.txt  run_nicad.py  run_siamese.py  run_simian.py  tool_operation.py  wrapper_solution.py
OmniCCG-API/: .gitignore  Dockerfile  README.md  analysis.py  compute_time.py  control.py  core.py  get_code_snippets.py  get_method_name.py  main.py  metrics.py
OmniCCG-CLI/: .gitignore  README.md  config.json  install.sh
OmniCCG-CLI/src/omniccg/: analysis.py  cli.py  compute_time.py  core.py  get_method_name.py  metrics.py
OmniCCG-CLI/src/omniccg/domain/: CloneClass.py  CloneFragment.py  CloneVersion.py
OmniCCG-Web/: .env  README.md  index.html  package-lock.json  package.json  vite.config.ts
OmniCCG-Web/src/: App.tsx  index.css
OmniCCG-Web/src/lib/: examplesData.ts  utils.ts
OmniCCG-Web/src/pages/: Configure.tsx  Home.tsx  Metrics.tsx  Visualize.tsx
OmniCCG-Web/src/services/: api.ts
OmniCCG-Web/src/types/: index.ts
results_of_evaluation/: general_times.txt
results_of_evaluation/PeerBanHelper/: ccg_data.xml  ccg_metrics.xml
results_of_evaluation/booklore/: ccg_data.xml  ccg_metrics.xml
results_of_evaluation/pkl/: ccg_data.xml  ccg_metrics.xml
results_of_evaluation/spring-ai-alibaba/: ccg_data.xml  ccg_metrics.xml
scripts/: analysis.py  datacol.py
tools/siamese/: config.properties
(+7 files in other folders)
